--- a/apk/res/values-am/strings.xml
+++ b/apk/res/values-am/strings.xml
@@ -92,6 +92,17 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"የጤና ውሂብዎን ይድረሱበት"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"የተቃጠሉ ካሎሪዎችን ያነባል"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"መተግበሪያዎቹ የተቃጠሉትን ካሎሪዎች እንዲያነቡ ያስችላቸዋል"</string>
+    <string name="background_read_medical_title" msgid="378446129450196253">"በዳራ ውስጥ ያለን ውሂብ በሙሉ መድረስ"</string>
+    <string name="background_read_medical_request_title" msgid="5388067032484069722">"<xliff:g id="APP_NAME">%1$s</xliff:g> በዳራ ውስጥ ያለውን ሁሉንም ውሂብ እንዲደርስ ይፈቀድለት?"</string>
+    <string name="background_read_medical_description" msgid="4205144207056391848">"ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የአካል ብቃት እና ጤናማነት ውሂብን እና የጤና መዝገቦች ውሂብን እንዲደርስ ይፍቀዱ"</string>
+    <string name="background_read_medical_request_description" msgid="6135447220241108032">"ከፈቀዱ፣ ይህን መተግበሪያ እየተጠቀሙ ባልሆኑበት ጊዜ መተግበሪያው የአካል ብቃት እና ጤናማነት ውሂብ እና የጤና መዝገቦች ውሂብን መድረስ ይችላል"</string>
+    <string name="historic_access_medical_title" msgid="1198466488695524014">"ያለፈ የአካል ብቃት እና ጤናማነት ውሂብን ድረስ"</string>
+    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"<xliff:g id="APP_NAME">%1$s</xliff:g> ያለፈ የአካል ብቃት እና ጤናማነት ውሂብን እንዲደርስ ይፈቀድለት?"</string>
+    <string name="historic_access_medical_description" msgid="513689388911992345">"ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> በፊት ያለን ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"ይህ መተግበሪያ ሁሉንም የቀደመ ውሂብ እንዲደርስ ይፍቀዱ"</string>
+    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"ከፈቀዱ፣ ይህ መተግበሪያ ከ<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g> የታከለ ውሂብን መድረስ ይችላል።"</string>
+    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"ከፈቀዱ፣ ይህ መተግበሪያ ሁሉንም ያለፈ ውሂብ መድረስ ይችላል።"</string>
+    <string name="historic_access_medical_warning" msgid="6691110601538756473">"በአሁኑ ጊዜ <xliff:g id="APP_NAME">%1$s</xliff:g> ምንም የማንበብ ፈቃዶች ስላልበሩለት ምንም የአካል ብቃት ውሂብ እየተነበበ አይደለም"</string>
     <string name="background_read_title" msgid="5061383169517186234">"በዳራ ውስጥ ያለው የውሂብ መዳረሻ"</string>
     <string name="background_read_request_title" msgid="8492898140120977977">"<xliff:g id="APP_NAME">%1$s</xliff:g> በዳራ ውስጥ ያለውን ውሂብ እንዲደርስ ይፈቀድለት?"</string>
     <string name="background_read_description" msgid="3203594555849969283">"ይህን መተግበሪያ በማይጠቀሙበት ጊዜ መተግበሪያው የጤና አገናኝ ውሂብን እንዲደርስ ይፍቀዱለት"</string>
@@ -270,52 +281,40 @@
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"ሁሉም የጤና መዝገቦች"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"ሁሉም የጤና መዝገቦች"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"ሁሉንም የጤና መዝገቦች ይጻፉ"</string>
-    <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"አለርጂዎች"</string>
-    <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"አለርጂዎች"</string>
-    <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"አለርጂዎችን ያንብቡ"</string>
-    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
-    <skip />
-    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
-    <skip />
-    <!-- no translation found for conditions_content_description (3230552343616193829) -->
-    <skip />
-    <string name="immunization_uppercase_label" msgid="1467176749064014020">"ክትባት"</string>
-    <string name="immunization_lowercase_label" msgid="6464922369026887687">"ክትባት"</string>
-    <string name="immunization_content_description" msgid="2910674919337229803">"ክትባትን ያንብቡ"</string>
-    <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"የቤተ-ሙከራ ውጤቶች"</string>
-    <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"የቤተ-ሙከራ ውጤቶች"</string>
-    <string name="laboratory_results_content_description" msgid="5882338877203692484">"የቤተ-ሙከራ ውጤቶችን አንብብ"</string>
+    <string name="allergies_intolerances_uppercase_label" msgid="2458552115947636884">"አለርጂዎች"</string>
+    <string name="allergies_intolerances_lowercase_label" msgid="5066782073511167288">"አለርጂዎች"</string>
+    <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"አለርጂዎችን ያንብቡ"</string>
+    <string name="conditions_uppercase_label" msgid="5260404343402770877">"ሁኔታዎች"</string>
+    <string name="conditions_lowercase_label" msgid="2678248918552246997">"ሁኔታዎች"</string>
+    <string name="conditions_content_description" msgid="3230552343616193829">"ሁኔታዎችን ያንብቡ"</string>
+    <string name="immunizations_uppercase_label" msgid="8440461752746256387">"ክትባቶች"</string>
+    <string name="immunizations_lowercase_label" msgid="3807025074680621043">"ክትባቶች"</string>
+    <string name="immunizations_content_description" msgid="2239351886343062194">"ክትባቶችን ያንብቡ"</string>
+    <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"የቤተ ሙከራ ውጤቶች"</string>
+    <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"የቤተ ሙከራ ውጤቶች"</string>
+    <string name="laboratory_results_content_description" msgid="7888886103734085841">"የቤተ ሙከራ ውጤቶችን ያንብቡ"</string>
     <string name="medications_uppercase_label" msgid="4783281053427990225">"ሕክምናዎች"</string>
     <string name="medications_lowercase_label" msgid="7808038774503092207">"ሕክምናዎች"</string>
     <string name="medications_content_description" msgid="6165382876281780190">"ሕክምናዎችን ያንብቡ"</string>
-    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
-    <skip />
-    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
-    <skip />
-    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
-    <skip />
-    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
-    <skip />
-    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
-    <skip />
-    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
-    <skip />
+    <string name="personal_details_uppercase_label" msgid="7241635933310394120">"የግል መረጃ ዝርዝሮች"</string>
+    <string name="personal_details_lowercase_label" msgid="1907848447611775151">"የግል መረጃ ዝርዝሮች"</string>
+    <string name="personal_details_content_description" msgid="3191211304673909831">"የግል መረጃ ዝርዝሮችን አንብብ"</string>
+    <string name="practitioner_details_uppercase_label" msgid="2940667649808082510">"የባለሙያ ዝርዝሮች"</string>
+    <string name="practitioner_details_lowercase_label" msgid="8195591077717971542">"የባለሙያ ዝርዝሮች"</string>
+    <string name="practitioner_details_content_description" msgid="8775396516928504185">"የባለሙያ ዝርዝሮችን አንብብ"</string>
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"እርግዝና"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"እርግዝና"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"እርግዝናን አንብብ"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"አሰራሮች"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"አሰራሮች"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"አሰራሮችን አንብብ"</string>
-    <string name="social_history_uppercase_label" msgid="1731364502071035544">"ማህበራዊ ታሪክ"</string>
+    <string name="social_history_uppercase_label" msgid="4119611299449533999">"ማህበራዊ ታሪክ"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"ማህበራዊ ታሪክ"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"ማህበራዊ ታሪክ አንብብ"</string>
-    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
-    <skip />
-    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
-    <skip />
-    <!-- no translation found for visits_content_description (6336796415049565697) -->
-    <skip />
-    <string name="vital_signs_uppercase_label" msgid="214938594708280346">"መሠረታዊ ምልክቶች"</string>
+    <string name="visits_uppercase_label" msgid="8532619758336375886">"ጉብኝቶች"</string>
+    <string name="visits_lowercase_label" msgid="2545887061364564151">"ጉብኝቶች"</string>
+    <string name="visits_content_description" msgid="6336796415049565697">"ጉብኝቶችን አንብብ"</string>
+    <string name="vital_signs_uppercase_label" msgid="289862347143374640">"መሠረታዊ ምልክቶች"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"መሠረታዊ ምልክቶች"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"መሠረታዊ ምልክቶችን አንብብ"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"አሰላሳይነት"</string>
@@ -332,8 +331,21 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"የንባብ መዳረሻ ከሰጡ መተግበሪያው አዲስ ውሂብን እና የያለፉት 30 ቀናት ውሂብን ማንበብ ይችላል"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"የንባብ መዳረሻ ከሰጡ መተግበሪያው አዲስ እና ያለፈ ውሂብን ማንበብ ይችላል"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> Health Connectን እንዲደርስ ይፈቀድለት?"</string>
-    <string name="request_permissions_rationale" msgid="6154280355215802538">"<xliff:g id="APP_NAME">%1$s</xliff:g> የእርስዎን ውሂብ እንዴት በገንቢው <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> ውስጥ እንደሚይዝ ማወቅ ይችላሉ"</string>
+    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
+    <skip />
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"የግላዊነት መመሪያ"</string>
+    <!-- no translation found for medical_request_header (2300521519021510027) -->
+    <skip />
+    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
+    <skip />
+    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
+    <skip />
+    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
+    <skip />
+    <!-- no translation found for medical_request_share (6237397362923728514) -->
+    <skip />
+    <!-- no translation found for medical_request_footer (6533749932770903089) -->
+    <skip />
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ሁሉም ፈቃዶች ይወገዱ?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"ሁሉንም አስወግድ"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> ከእንግዲህ ከጤና አገናኝ የመጣ ማንኛውንም ውሂብ ማንበብ ወይም መጻፍ አይችልም።\n\nይህ መተግበሪያ እንደ ካሜራ፣ ማይክሮፎን ወይም አካባቢ ያሉ ሊኖሩ በሚችሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አያሳርፍም።"</string>
@@ -341,9 +353,15 @@
     <string name="permissions_disconnect_dialog_message_history" msgid="3793206180295111081">"<xliff:g id="APP_NAME">%1$s</xliff:g> ከጤና አገናኝ የመጣ ማንኛውም ውሂብ፣ ያለፈ ውሂብን ጨምሮ ከእንግዲህ ማንበብ ወይም መጻፍ አይችልም።\n\nይህ መተግበሪያ ሊኖሩት የሚችሉትን እንደ አካባቢ፣ ካሜራ ወይም ማይክሮፎን ባሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አያሳርፍም።"</string>
     <string name="permissions_disconnect_dialog_message_combined" msgid="4163369526932602203">"<xliff:g id="APP_NAME">%1$s</xliff:g> ከጤና አገናኝ የመጣ ማንኛውም ውሂብ፣ የዳራ ወይም ያለፈ ውሂብን ጨምሮ ከእንግዲህ ማንበብ ወይም መጻፍ አይችልም።\n\nይህ መተግበሪያ ሊኖሩት የሚችሉትን እንደ አካባቢ፣ ካሜራ ወይም ማይክሮፎን ባሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አያሳርፍም።"</string>
     <string name="permissions_disconnect_dialog_checkbox" msgid="8646951566431872823">"እንዲሁም የ<xliff:g id="APP_NAME">%1$s</xliff:g> ውሂብን ከጤና አገናኝ ሰርዝ"</string>
-    <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"ሁሉም ፈቃዶች ይወገዱ?"</string>
-    <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"ሁሉም የጤና መዝገብ ፈቃዶች ይወገዱ?"</string>
     <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"ሁሉም የአካል ብቃት እና የጤናማነት ፈቃዶች ይወገዱ?"</string>
+    <string name="disconnect_all_fitness_permissions_dialog_checkbox" msgid="8808559689899914478">"እንዲሁም ከ<xliff:g id="APP_NAME">%1$s</xliff:g> የመጣ የአካል ብቃት ውሂብ ከጤና አገናኝ ላይ ይሰርዙ"</string>
+    <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"ሁሉም የጤና መዝገብ ፈቃዶች ይወገዱ?"</string>
+    <string name="disconnect_all_medical_permissions_dialog_checkbox" msgid="7782158941871987263">"እንዲሁም ከ<xliff:g id="APP_NAME">%1$s</xliff:g> የመጡ የጤና መዝገቦችን ከጤና አገናኝ ላይ ይሰርዙ"</string>
+    <string name="disconnect_all_fitness_or_medical_no_additional_permissions_dialog_message" msgid="6610810945930258582">"<xliff:g id="APP_NAME">%1$s</xliff:g> ከእንግዲህ ይህን ከጤና አገናኝ የመጣ ማንኛውንም ውሂብ ማንበብ ወይም መጻፍ አይችልም።\n\nይህ መተግበሪያ እንደ ካሜራ፣ ማይክሮፎን ወይም አካባቢ ያሉ ሊኖሩ በሚችሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አያሳርፍም።"</string>
+    <string name="disconnect_all_fitness_or_medical_and_background_permissions_dialog_message" msgid="7138878481421234556">"<xliff:g id="APP_NAME">%1$s</xliff:g> የዳራ ውሂብን ጨምሮ ይህን ከጤና አገናኝ የመጣ ውሂብ ከእንግዲህ ማንበብ ወይም መፃፍ አይችልም።\n\nይህ መተግበሪያው ሊኖሩት በሚችሉት እንደ ካሜራ፣ ማይክሮፎን ወይም አካባቢ ወይም ባሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አይኖረውም።"</string>
+    <string name="disconnect_all_fitness_or_medical_and_historical_permissions_dialog_message" msgid="1519496566456028625">"<xliff:g id="APP_NAME">%1$s</xliff:g> የድሮ ውሂብን ጨምሮ ይህን ከጤና አገናኝ የመጣ ውሂብ ከእንግዲህ ማንበብ ወይም መፃፍ አይችልም።\n\nይህ መተግበሪያው ሊኖሩት በሚችሉት እንደ ካሜራ፣ ማይክሮፎን ወይም አካባቢ ባሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አይኖረውም።"</string>
+    <string name="disconnect_all_fitness_or_medical_and_additional_permissions_dialog_message" msgid="5147728456578218902">"<xliff:g id="APP_NAME">%1$s</xliff:g> የዳራ እና የድሮ ውሂብን ጨምሮ ይህን ከጤና አገናኝ የመጣ ውሂብ ከእንግዲህ ማንበብ ወይም መፃፍ አይችልም።\n\nይህ መተግበሪያው ሊኖሩት በሚችሉት እንደ ካሜራ፣ ማይክሮፎን ወይም አካባቢ ወይም ባሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አይኖረውም።"</string>
+    <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"ሁሉም ፈቃዶች ይወገዱ?"</string>
     <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> ከእንግዲህ ከጤና አገናኝ የመጣ ውሂብን ማንበብ ወይም መፃፍ አይችልም።\n\nይህ መተግበሪያው ሊኖሩት በሚችሉ እንደ ካሜራ፣ ማይክሮፎን ወይም አካባቢ ባሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አያሳርፍም።"</string>
     <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> የዳራ ውሂብን ጨምሮ ከጤና አገናኝ የመጣ ውሂብን ከእንግዲህ ማንበብ ወይም መፃፍ አይችልም።\n\nይህ መተግበሪያው ሊኖሩት በሚችሉት እንደ ካሜራ፣ ማይክሮፎን ወይም አካባቢ ወይም ባሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አይኖረውም።"</string>
     <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"<xliff:g id="APP_NAME">%1$s</xliff:g> የድሮ ውሂብን ጨምሮ ከጤና አገናኝ የመጣ ውሂብን ከእንግዲህ ማንበብ ወይም መፃፍ አይችልም።\n\nይህ መተግበሪያው ሊኖሩት በሚችሉት እንደ ካሜራ፣ ማይክሮፎን ወይም አካባቢ ባሉ ሌሎች ፈቃዶች ላይ ተጽዕኖ አይኖረውም።"</string>
@@ -355,8 +373,7 @@
     <string name="navigation_previous_day" msgid="718353386484938584">"ቀዳሚው ቀን"</string>
     <string name="default_error" msgid="7966868260616403475">"የሆነ ችግር ተፈጥሯል። እባክዎ እንደገና ይሞክሩ።"</string>
     <string name="unkwown_resource" msgid="7932225227431922125">"የማይታወቅ ንብረት"</string>
-    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
-    <skip />
+    <string name="raw_fhir_title" msgid="1295744907036066319">"የምንጭ ውሂብ"</string>
     <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g> ክፍት ቅንፍ።"</string>
     <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>ዝግ ቅንፍ።"</string>
     <string name="raw_fhir_field_value" msgid="369633095565031835">"<xliff:g id="PREFIX">%1$s</xliff:g> የመስክ <xliff:g id="FIELD">%2$s</xliff:g> እሴት"</string>
@@ -397,7 +414,7 @@
     <string name="fitness_permissions_summary" msgid="6476469281589015459">"ልምምድ፣ እንቅልፍ፣ ሥነ ምግብ እና ሌሎች"</string>
     <string name="medical_permissions" msgid="1224097151249321566">"የጤና መዝገቦች"</string>
     <string name="medical_permissions_lowercase" msgid="3969792205103436491">"የጤና መዝገቦች"</string>
-    <string name="medical_permissions_summary" msgid="5553982055903211592">"የቤተ ሙከራ ውጤቶች፣ መድኃኒቶች፣ ክትባቶች እና ሌሎች"</string>
+    <string name="medical_permissions_summary" msgid="5526004634109548577">"የቤተ ሙከራ ውጤቶች፣ መድኃኒቶች፣ ክትባቶች እና ሌሎችም"</string>
     <string name="denied_apps_banner_title" msgid="1997745063608657965">"የተወገዱ የመተግበሪያ ፍቃዶች"</string>
     <string name="denied_apps_banner_message_one_app" msgid="17659513485678315">"የጤና አገናኝ የ<xliff:g id="APP_DATA">%s</xliff:g>ን ፈቃዶች አስወግዷል"</string>
     <string name="denied_apps_banner_message_two_apps" msgid="1147216810892373640">"የጤና አገናኝ የ<xliff:g id="APP_DATA_0">%1$s</xliff:g>ን እና የ<xliff:g id="APP_DATA_TWO">%2$s</xliff:g>ን ፈቃዶች አስወግዷል"</string>
@@ -489,10 +506,8 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"ወደ Play መደብር ሂድ"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"በጤና አገናኝ ይጀምሩ"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"የጤና አገናኝ የእርስዎን የጤና እና አካል ብቃት ውሂብ ያከማቻል፣ ይህም በመሣሪያዎ ላይ ያሉ የተለያዩ መተግበሪያዎችን ለማስመር ቀላል መንገድ ይሰጥዎታል"</string>
-    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
-    <skip />
-    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
-    <skip />
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"የጤና አገናኝ የጤና እና አካል ብቃት ውሂብዎን ከተለያዩ መተግበሪያዎች ያከማቻል እና ያሰምራል።\n\n"<b>"የልምምድ ክፍለ-ጊዜዎች፣ እርምጃዎች፣ አመጋገብ፣ እንቅልፍ እና ሌሎችንም ጨምሮ"</b>"የአካል ብቃት እና ጤናማነት ውሂብ\n\n"<b>"ክትባቶች፣ የቤተ ሙከራ ውጤቶች እና ሌሎችንም ጨምሮ"</b>"የጤና መዝገቦች"</string>
+    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"በጤና አገናኝ የሚከተሉትን ማድረግ ይችላሉ"</string>
     <string name="share_data" msgid="3481932156368883946">"በመተግበሪያዎችዎ ውሂብን ያጋሩ"</string>
     <string name="share_data_description" msgid="2919871301634375092">"እያንዳንዱ መተግበሪያ በጤና አገናኝ ላይ ማንበብ ወይም መጻፍ የሚችለውን ውሂብ ይምረጡ"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"የእርስዎን ቅንብሮች እና ግላዊነት ያስተዳድሩ"</string>
@@ -1077,6 +1092,8 @@
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"ለዚህ መተግበሪያ የዳራ ወይም ያለፈ ወሂብ መዳረሻን ለማብራት ቢያንስ አንድ የአንብብ ፍቃድ ያንቁ"</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"ለዚህ መተግበሪያ የዳራ መዳረሻን ለማብራት ቢያንስ አንድ የአንብብ ፍቃድ ያንቁ"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"ለዚህ መተግበሪያ ያለፈ መዳረሻን ለማብራት ቢያንስ አንድ የአንብብ ፍቃድ ያንቁ"</string>
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> ቀድሞውኑ ለእርስዎ የጤና መዝገቦች ያለፈ ውሂብን መድረስ ይችላል። ይህን ለመለወጥ ለዚህ መተግበሪያ የጤና መዝገብ ፈቃዶችን ያጥፉ"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"የጤና መዝገብ ፈቃዶችን ያስተዳድሩ"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"የጤና አገናኝ መጠቀም ይጀምሩ"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"የመጀመሪያ መተግበሪያዎችዎን በመካከላቸው የጤና እና የአካል ብቃት ውሂብን እንዲያጋሩ ያስምሯቸው"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"አዋቅር"</string>
