--- a/apk/res/values-en-rGB/strings.xml
+++ b/apk/res/values-en-rGB/strings.xml
@@ -92,28 +92,17 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"access your health data"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"Read calories burned"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"Allows the app to read the calories burned"</string>
-    <!-- no translation found for background_read_medical_title (378446129450196253) -->
-    <skip />
-    <!-- no translation found for background_read_medical_request_title (5388067032484069722) -->
-    <skip />
-    <!-- no translation found for background_read_medical_description (4205144207056391848) -->
-    <skip />
-    <!-- no translation found for background_read_medical_request_description (6135447220241108032) -->
-    <skip />
-    <!-- no translation found for historic_access_medical_title (1198466488695524014) -->
-    <skip />
-    <!-- no translation found for historic_access_medical_request_title (4927886483832141584) -->
-    <skip />
-    <!-- no translation found for historic_access_medical_description (513689388911992345) -->
-    <skip />
-    <!-- no translation found for historic_access_medical_description_fallback (1596909285259037066) -->
-    <skip />
-    <!-- no translation found for historic_access_medical_request_description (6938665708764487963) -->
-    <skip />
-    <!-- no translation found for historic_access_medical_request_description_fallback (1075934237674126677) -->
-    <skip />
-    <!-- no translation found for historic_access_medical_warning (6691110601538756473) -->
-    <skip />
+    <string name="background_read_medical_title" msgid="378446129450196253">"Access all data in the background"</string>
+    <string name="background_read_medical_request_title" msgid="5388067032484069722">"Allow <xliff:g id="APP_NAME">%1$s</xliff:g> to access all data in the background?"</string>
+    <string name="background_read_medical_description" msgid="4205144207056391848">"Allow this app to access fitness and wellness data and health records data when you\'re not using the app"</string>
+    <string name="background_read_medical_request_description" msgid="6135447220241108032">"If you allow, this app can access fitness and wellness data and health records data when you\'re not using the app."</string>
+    <string name="historic_access_medical_title" msgid="1198466488695524014">"Access past fitness and wellness data"</string>
+    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"Allow <xliff:g id="APP_NAME">%1$s</xliff:g> to access past fitness and wellness data?"</string>
+    <string name="historic_access_medical_description" msgid="513689388911992345">"Allow this app to access data added before <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>"</string>
+    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"Allow this app to access all past data"</string>
+    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"If you allow, this app can access data added before <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>."</string>
+    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"If you allow, this app can access all past data."</string>
+    <string name="historic_access_medical_warning" msgid="6691110601538756473">"No fitness data is currently being read because <xliff:g id="APP_NAME">%1$s</xliff:g> has no read permissions on"</string>
     <string name="background_read_title" msgid="5061383169517186234">"Access data in the background"</string>
     <string name="background_read_request_title" msgid="8492898140120977977">"Allow <xliff:g id="APP_NAME">%1$s</xliff:g> to access data in the background?"</string>
     <string name="background_read_description" msgid="3203594555849969283">"Allow this app to access Health Connect data when you\'re not using the app"</string>
@@ -292,27 +281,18 @@
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"All health records"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"all health records"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Write all health records"</string>
-    <!-- no translation found for allergies_intolerances_uppercase_label (2458552115947636884) -->
-    <skip />
-    <!-- no translation found for allergies_intolerances_lowercase_label (5066782073511167288) -->
-    <skip />
-    <!-- no translation found for allergies_intolerances_content_description (7954532940667325068) -->
-    <skip />
+    <string name="allergies_intolerances_uppercase_label" msgid="2458552115947636884">"Allergies"</string>
+    <string name="allergies_intolerances_lowercase_label" msgid="5066782073511167288">"allergies"</string>
+    <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"Read allergies"</string>
     <string name="conditions_uppercase_label" msgid="5260404343402770877">"Conditions"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"conditions"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"Read conditions"</string>
-    <!-- no translation found for immunizations_uppercase_label (8440461752746256387) -->
-    <skip />
-    <!-- no translation found for immunizations_lowercase_label (3807025074680621043) -->
-    <skip />
-    <!-- no translation found for immunizations_content_description (2239351886343062194) -->
-    <skip />
-    <!-- no translation found for laboratory_results_uppercase_label (3400725778254150910) -->
-    <skip />
-    <!-- no translation found for laboratory_results_lowercase_label (7647457227104919126) -->
-    <skip />
-    <!-- no translation found for laboratory_results_content_description (7888886103734085841) -->
-    <skip />
+    <string name="immunizations_uppercase_label" msgid="8440461752746256387">"Vaccines"</string>
+    <string name="immunizations_lowercase_label" msgid="3807025074680621043">"vaccines"</string>
+    <string name="immunizations_content_description" msgid="2239351886343062194">"Read vaccines"</string>
+    <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"Lab results"</string>
+    <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"lab results"</string>
+    <string name="laboratory_results_content_description" msgid="7888886103734085841">"Read lab results"</string>
     <string name="medications_uppercase_label" msgid="4783281053427990225">"Medications"</string>
     <string name="medications_lowercase_label" msgid="7808038774503092207">"medications"</string>
     <string name="medications_content_description" msgid="6165382876281780190">"Read medications"</string>
@@ -328,15 +308,13 @@
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"Procedures"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"procedures"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"Read procedures"</string>
-    <!-- no translation found for social_history_uppercase_label (4119611299449533999) -->
-    <skip />
+    <string name="social_history_uppercase_label" msgid="4119611299449533999">"Social history"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"social history"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"Read social history"</string>
     <string name="visits_uppercase_label" msgid="8532619758336375886">"Visits"</string>
     <string name="visits_lowercase_label" msgid="2545887061364564151">"visits"</string>
     <string name="visits_content_description" msgid="6336796415049565697">"Read visits"</string>
-    <!-- no translation found for vital_signs_uppercase_label (289862347143374640) -->
-    <skip />
+    <string name="vital_signs_uppercase_label" msgid="289862347143374640">"Vital signs"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"vital signs"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"Read vital signs"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"Mindfulness"</string>
@@ -353,8 +331,21 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"If you give read access, the app can read new data and data from the past 30 days"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"If you give read access, the app can read new and past data"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Allow <xliff:g id="APP_NAME">%1$s</xliff:g> to access Health Connect?"</string>
-    <string name="request_permissions_rationale" msgid="6154280355215802538">"You can learn how <xliff:g id="APP_NAME">%1$s</xliff:g> handles your data in the developer\'s <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
+    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
+    <skip />
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"privacy policy"</string>
+    <!-- no translation found for medical_request_header (2300521519021510027) -->
+    <skip />
+    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
+    <skip />
+    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
+    <skip />
+    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
+    <skip />
+    <!-- no translation found for medical_request_share (6237397362923728514) -->
+    <skip />
+    <!-- no translation found for medical_request_footer (6533749932770903089) -->
+    <skip />
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Remove all permissions?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Remove all"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> will no longer be able to read or write any data from Health Connect.\n\nThis doesn\'t affect other permissions that this app may have, like camera, microphone or location."</string>
@@ -363,19 +354,13 @@
     <string name="permissions_disconnect_dialog_message_combined" msgid="4163369526932602203">"<xliff:g id="APP_NAME">%1$s</xliff:g> will no longer be able to read or write any data from Health Connect, including background and past data.\n\nThis doesn\'t affect other permissions that this app may have, like location, camera or microphone."</string>
     <string name="permissions_disconnect_dialog_checkbox" msgid="8646951566431872823">"Also delete <xliff:g id="APP_NAME">%1$s</xliff:g> data from Health Connect"</string>
     <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"Remove all fitness and wellness permissions?"</string>
-    <!-- no translation found for disconnect_all_fitness_permissions_dialog_checkbox (8808559689899914478) -->
-    <skip />
+    <string name="disconnect_all_fitness_permissions_dialog_checkbox" msgid="8808559689899914478">"Also delete fitness data from <xliff:g id="APP_NAME">%1$s</xliff:g> from Health Connect"</string>
     <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"Remove all health record permissions?"</string>
-    <!-- no translation found for disconnect_all_medical_permissions_dialog_checkbox (7782158941871987263) -->
-    <skip />
-    <!-- no translation found for disconnect_all_fitness_or_medical_no_additional_permissions_dialog_message (6610810945930258582) -->
-    <skip />
-    <!-- no translation found for disconnect_all_fitness_or_medical_and_background_permissions_dialog_message (7138878481421234556) -->
-    <skip />
-    <!-- no translation found for disconnect_all_fitness_or_medical_and_historical_permissions_dialog_message (1519496566456028625) -->
-    <skip />
-    <!-- no translation found for disconnect_all_fitness_or_medical_and_additional_permissions_dialog_message (5147728456578218902) -->
-    <skip />
+    <string name="disconnect_all_medical_permissions_dialog_checkbox" msgid="7782158941871987263">"Also delete health records from <xliff:g id="APP_NAME">%1$s</xliff:g> from Health Connect"</string>
+    <string name="disconnect_all_fitness_or_medical_no_additional_permissions_dialog_message" msgid="6610810945930258582">"<xliff:g id="APP_NAME">%1$s</xliff:g> will no longer be able to read or write this data from Health Connect.\n\nThis doesn\'t affect other permissions that this app may have, like camera, microphone or location."</string>
+    <string name="disconnect_all_fitness_or_medical_and_background_permissions_dialog_message" msgid="7138878481421234556">"<xliff:g id="APP_NAME">%1$s</xliff:g> will no longer be able to read or write this data from Health Connect, including background data.\n\nThis doesn\'t affect other permissions that this app may have, like camera, microphone or location."</string>
+    <string name="disconnect_all_fitness_or_medical_and_historical_permissions_dialog_message" msgid="1519496566456028625">"<xliff:g id="APP_NAME">%1$s</xliff:g> will no longer be able to read or write this data from Health Connect, including past data.\n\nThis doesn\'t affect other permissions that this app may have, like camera, microphone or location."</string>
+    <string name="disconnect_all_fitness_or_medical_and_additional_permissions_dialog_message" msgid="5147728456578218902">"<xliff:g id="APP_NAME">%1$s</xliff:g> will no longer be able to read or write this data from Health Connect, including background and past data.\n\nThis doesn\'t affect other permissions that this app may have, like camera, microphone or location."</string>
     <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"Remove all permissions?"</string>
     <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> will no longer be able to read or write data from Health Connect.\n\nThis doesn\'t affect other permissions that this app may have, like camera, microphone or location."</string>
     <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> will no longer be able to read or write data from Health Connect, including background data.\n\nThis doesn\'t affect other permissions that this app may have, like camera, microphone or location."</string>
@@ -429,8 +414,7 @@
     <string name="fitness_permissions_summary" msgid="6476469281589015459">"Exercise, sleep, nutrition and others"</string>
     <string name="medical_permissions" msgid="1224097151249321566">"Health records"</string>
     <string name="medical_permissions_lowercase" msgid="3969792205103436491">"health records"</string>
-    <!-- no translation found for medical_permissions_summary (5526004634109548577) -->
-    <skip />
+    <string name="medical_permissions_summary" msgid="5526004634109548577">"Lab results, medications, vaccines and others"</string>
     <string name="denied_apps_banner_title" msgid="1997745063608657965">"Removed app permissions"</string>
     <string name="denied_apps_banner_message_one_app" msgid="17659513485678315">"Health Connect removed permissions for <xliff:g id="APP_DATA">%s</xliff:g>"</string>
     <string name="denied_apps_banner_message_two_apps" msgid="1147216810892373640">"Health Connect removed permissions for <xliff:g id="APP_DATA_0">%1$s</xliff:g> and <xliff:g id="APP_DATA_TWO">%2$s</xliff:g>"</string>
@@ -522,8 +506,7 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Go to the Play Store"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Get started with Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect stores your health and fitness data, giving you a simple way to sync the different apps on your device"</string>
-    <!-- no translation found for onboarding_description_health_records (6586657048844511252) -->
-    <skip />
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect stores and syncs your health and fitness data from different apps.\n\n"<b>"Fitness and wellness data,"</b>" including exercise sessions, steps, nutrition, sleep and more\n\n"<b>"Health records,"</b>" including vaccines, lab results and more"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"With Health Connect, you can"</string>
     <string name="share_data" msgid="3481932156368883946">"Share data with your apps"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Choose the data that each app can read or write to Health Connect"</string>
@@ -1109,10 +1092,8 @@
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"Enable at least one read permission in order to turn on background or past data access for this app"</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"Enable at least one read permission in order to turn on background access for this app"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"Enable at least one read permission in order to turn on past data access for this app"</string>
-    <!-- no translation found for additional_access_medical_read_footer (4640796038121080343) -->
-    <skip />
-    <!-- no translation found for additional_access_medical_read_footer_link (2797623091827504856) -->
-    <skip />
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> can already access past data for your health records. To change this, turn off health record permissions for this app"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"Manage health record permissions"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"Start using Health Connect"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"Sync your first apps to share health and fitness data between them"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"Set up"</string>
