--- a/apk/res/values-ja/strings.xml
+++ b/apk/res/values-ja/strings.xml
@@ -92,6 +92,17 @@
     <string name="permgroupdesc_health" msgid="252080476917407273">"健康に関するデータにアクセスします"</string>
     <string name="permlab_readCaloriesBurned" msgid="8998140381590624692">"消費カロリーの読み取り"</string>
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"消費カロリーの読み取りをアプリに許可します"</string>
+    <string name="background_read_medical_title" msgid="378446129450196253">"バックグラウンドですべてのデータにアクセスする"</string>
+    <string name="background_read_medical_request_title" msgid="5388067032484069722">"バックグラウンドですべてのデータにアクセスすることを <xliff:g id="APP_NAME">%1$s</xliff:g> に許可しますか？"</string>
+    <string name="background_read_medical_description" msgid="4205144207056391848">"このアプリが使用されていないときに、フィットネスとウェルネスに関するデータと医療記録のデータへのアクセスを許可します"</string>
+    <string name="background_read_medical_request_description" msgid="6135447220241108032">"許可すると、このアプリは使用されていないときにフィットネスとウェルネスに関するデータと医療記録のデータにアクセスできます。"</string>
+    <string name="historic_access_medical_title" msgid="1198466488695524014">"フィットネスとウェルネスに関する過去のデータにアクセスする"</string>
+    <string name="historic_access_medical_request_title" msgid="4927886483832141584">"フィットネスとウェルネスに関する過去のデータへのアクセスを <xliff:g id="APP_NAME">%1$s</xliff:g> に許可しますか？"</string>
+    <string name="historic_access_medical_description" msgid="513689388911992345">"<xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたデータへのアクセスを、このアプリに許可します"</string>
+    <string name="historic_access_medical_description_fallback" msgid="1596909285259037066">"過去のすべてのデータへのアクセスを、このアプリに許可します"</string>
+    <string name="historic_access_medical_request_description" msgid="6938665708764487963">"許可すると、このアプリは <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>以前に追加されたデータにアクセスできます。"</string>
+    <string name="historic_access_medical_request_description_fallback" msgid="1075934237674126677">"許可すると、このアプリは過去のすべてのデータにアクセスできます。"</string>
+    <string name="historic_access_medical_warning" msgid="6691110601538756473">"<xliff:g id="APP_NAME">%1$s</xliff:g> には読み取り権限がないため、現在読み取られているフィットネス データはありません"</string>
     <string name="background_read_title" msgid="5061383169517186234">"バックグラウンドでのデータアクセス"</string>
     <string name="background_read_request_title" msgid="8492898140120977977">"<xliff:g id="APP_NAME">%1$s</xliff:g>にバックグラウンドでのデータへのアクセスを許可しますか？"</string>
     <string name="background_read_description" msgid="3203594555849969283">"このアプリが使用されていないときにヘルスコネクト データへのアクセスを許可します"</string>
@@ -270,52 +281,40 @@
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"すべての医療記録"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"すべての医療記録"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"医療記録の書き込み"</string>
-    <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"アレルギー"</string>
-    <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"アレルギー"</string>
-    <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"アレルギー不耐性データの読み取り"</string>
-    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
-    <skip />
-    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
-    <skip />
-    <!-- no translation found for conditions_content_description (3230552343616193829) -->
-    <skip />
-    <string name="immunization_uppercase_label" msgid="1467176749064014020">"予防接種データ"</string>
-    <string name="immunization_lowercase_label" msgid="6464922369026887687">"予防接種データ"</string>
-    <string name="immunization_content_description" msgid="2910674919337229803">"予防接種データの読み取り"</string>
-    <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"検査結果"</string>
-    <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"検査結果"</string>
-    <string name="laboratory_results_content_description" msgid="5882338877203692484">"検査結果の読み取り"</string>
+    <string name="allergies_intolerances_uppercase_label" msgid="2458552115947636884">"アレルギー不耐性"</string>
+    <string name="allergies_intolerances_lowercase_label" msgid="5066782073511167288">"アレルギー不耐性"</string>
+    <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"アレルギー不耐性データの読み取り"</string>
+    <string name="conditions_uppercase_label" msgid="5260404343402770877">"健康状態"</string>
+    <string name="conditions_lowercase_label" msgid="2678248918552246997">"健康状態"</string>
+    <string name="conditions_content_description" msgid="3230552343616193829">"健康状態の読み取り"</string>
+    <string name="immunizations_uppercase_label" msgid="8440461752746256387">"ワクチン接種"</string>
+    <string name="immunizations_lowercase_label" msgid="3807025074680621043">"ワクチン接種"</string>
+    <string name="immunizations_content_description" msgid="2239351886343062194">"ワクチン接種データの読み取り"</string>
+    <string name="laboratory_results_uppercase_label" msgid="3400725778254150910">"検査結果"</string>
+    <string name="laboratory_results_lowercase_label" msgid="7647457227104919126">"検査結果"</string>
+    <string name="laboratory_results_content_description" msgid="7888886103734085841">"検査結果データの読み取り"</string>
     <string name="medications_uppercase_label" msgid="4783281053427990225">"服薬情報"</string>
     <string name="medications_lowercase_label" msgid="7808038774503092207">"服薬情報"</string>
     <string name="medications_content_description" msgid="6165382876281780190">"服薬情報を読み取る"</string>
-    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
-    <skip />
-    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
-    <skip />
-    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
-    <skip />
-    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
-    <skip />
-    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
-    <skip />
-    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
-    <skip />
+    <string name="personal_details_uppercase_label" msgid="7241635933310394120">"個人の詳細"</string>
+    <string name="personal_details_lowercase_label" msgid="1907848447611775151">"個人の詳細"</string>
+    <string name="personal_details_content_description" msgid="3191211304673909831">"個人の詳細の読み取り"</string>
+    <string name="practitioner_details_uppercase_label" msgid="2940667649808082510">"医療従事者の詳細"</string>
+    <string name="practitioner_details_lowercase_label" msgid="8195591077717971542">"医療従事者の詳細"</string>
+    <string name="practitioner_details_content_description" msgid="8775396516928504185">"医療従事者の詳細の読み取り"</string>
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"妊娠"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"妊娠"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"妊娠データの読み取り"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"治療"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"治療"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"治療データの読み取り"</string>
-    <string name="social_history_uppercase_label" msgid="1731364502071035544">"社会歴"</string>
+    <string name="social_history_uppercase_label" msgid="4119611299449533999">"社会歴"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"社会歴"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"社会歴の読み取り"</string>
-    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
-    <skip />
-    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
-    <skip />
-    <!-- no translation found for visits_content_description (6336796415049565697) -->
-    <skip />
-    <string name="vital_signs_uppercase_label" msgid="214938594708280346">"バイタルサイン"</string>
+    <string name="visits_uppercase_label" msgid="8532619758336375886">"受診"</string>
+    <string name="visits_lowercase_label" msgid="2545887061364564151">"受診"</string>
+    <string name="visits_content_description" msgid="6336796415049565697">"受診の読み取り"</string>
+    <string name="vital_signs_uppercase_label" msgid="289862347143374640">"バイタルサイン"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"バイタルサイン"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"バイタルサインの読み取り"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"マインドフルネス"</string>
@@ -332,8 +331,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"読み取りアクセス権を付与すると、このアプリは新規データと過去 30 日間のデータを読み取れるようになります"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"読み取りアクセス権を付与すると、このアプリは新規データと過去のデータを読み取れるようになります"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> にヘルスコネクトへのアクセスを許可しますか？"</string>
-    <string name="request_permissions_rationale" msgid="6154280355215802538">"<xliff:g id="APP_NAME">%1$s</xliff:g> でのデータの取り扱いについて、デベロッパーの<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>でご確認ください"</string>
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"<xliff:g id="APP_NAME">%1$s</xliff:g> によるユーザーデータの取り扱いについては、<xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>をご覧ください"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"プライバシー ポリシー"</string>
+    <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> に医療記録へのアクセスを許可しますか？"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"アクセス権を付与すると、このアプリはアレルギー、検査結果、ワクチン接種などのデータを読み書きできるようになります\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"医療記録について"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"共有するデータ"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"許可すると、<xliff:g id="APP_NAME">%1$s</xliff:g> はヘルスコネクトと医療記録を共有できるようになります。"</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"さまざまなアプリやソースの医療記録を同期して 1 か所で管理できます"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"すべての権限を削除しますか？"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"すべて削除"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> はヘルスコネクトのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、カメラ、マイク、位置情報など、このアプリのその他の権限には影響しません。"</string>
@@ -341,9 +346,15 @@
     <string name="permissions_disconnect_dialog_message_history" msgid="3793206180295111081">"<xliff:g id="APP_NAME">%1$s</xliff:g> は、過去のデータを含め、ヘルスコネクトのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、位置情報、カメラ、マイクなど、このアプリのその他の権限には影響しません。"</string>
     <string name="permissions_disconnect_dialog_message_combined" msgid="4163369526932602203">"<xliff:g id="APP_NAME">%1$s</xliff:g> は、バックグラウンド データや過去のデータを含め、ヘルスコネクトのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、位置情報、カメラ、マイクなど、このアプリのその他の権限には影響しません。"</string>
     <string name="permissions_disconnect_dialog_checkbox" msgid="8646951566431872823">"ヘルスコネクトから <xliff:g id="APP_NAME">%1$s</xliff:g> のデータも削除する"</string>
-    <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"すべての権限を削除しますか？"</string>
-    <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"医療記録の権限をすべて削除しますか？"</string>
     <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"フィットネスとウェルネスの権限をすべて削除しますか？"</string>
+    <string name="disconnect_all_fitness_permissions_dialog_checkbox" msgid="8808559689899914478">"<xliff:g id="APP_NAME">%1$s</xliff:g> のフィットネス データもヘルスコネクトから削除する"</string>
+    <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"医療記録の権限をすべて削除しますか？"</string>
+    <string name="disconnect_all_medical_permissions_dialog_checkbox" msgid="7782158941871987263">"<xliff:g id="APP_NAME">%1$s</xliff:g> の医療記録もヘルスコネクトから削除する"</string>
+    <string name="disconnect_all_fitness_or_medical_no_additional_permissions_dialog_message" msgid="6610810945930258582">"<xliff:g id="APP_NAME">%1$s</xliff:g> はヘルスコネクトのこのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、カメラ、マイク、位置情報など、このアプリのその他の権限には影響しません。"</string>
+    <string name="disconnect_all_fitness_or_medical_and_background_permissions_dialog_message" msgid="7138878481421234556">"<xliff:g id="APP_NAME">%1$s</xliff:g> は、バックグラウンド データを含め、ヘルスコネクトのこのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、カメラ、マイク、位置情報など、このアプリのその他の権限には影響しません。"</string>
+    <string name="disconnect_all_fitness_or_medical_and_historical_permissions_dialog_message" msgid="1519496566456028625">"<xliff:g id="APP_NAME">%1$s</xliff:g> は、過去のデータを含め、ヘルスコネクトのこのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、カメラ、マイク、位置情報など、このアプリのその他の権限には影響しません。"</string>
+    <string name="disconnect_all_fitness_or_medical_and_additional_permissions_dialog_message" msgid="5147728456578218902">"<xliff:g id="APP_NAME">%1$s</xliff:g> は、バックグラウンド データや過去のデータを含め、ヘルスコネクトのこのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、カメラ、マイク、位置情報など、このアプリのその他の権限には影響しません。"</string>
+    <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"すべての権限を削除しますか？"</string>
     <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> はヘルスコネクトのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、カメラ、マイク、位置情報など、このアプリのその他の権限には影響しません。"</string>
     <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> は、バックグラウンド データを含め、ヘルスコネクトのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、カメラ、マイク、位置情報など、このアプリのその他の権限には影響しません。"</string>
     <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"<xliff:g id="APP_NAME">%1$s</xliff:g> は、過去のデータを含め、ヘルスコネクトのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、カメラ、マイク、位置情報など、このアプリのその他の権限には影響しません。"</string>
@@ -396,7 +407,7 @@
     <string name="fitness_permissions_summary" msgid="6476469281589015459">"エクササイズ、睡眠、栄養、その他"</string>
     <string name="medical_permissions" msgid="1224097151249321566">"医療記録"</string>
     <string name="medical_permissions_lowercase" msgid="3969792205103436491">"医療記録"</string>
-    <string name="medical_permissions_summary" msgid="5553982055903211592">"検査結果、医薬品、予防接種記録、その他"</string>
+    <string name="medical_permissions_summary" msgid="5526004634109548577">"検査結果、投薬、ワクチン接種、その他"</string>
     <string name="denied_apps_banner_title" msgid="1997745063608657965">"アプリの権限を削除しました"</string>
     <string name="denied_apps_banner_message_one_app" msgid="17659513485678315">"ヘルスコネクトにより、<xliff:g id="APP_DATA">%s</xliff:g> に対する権限が削除されました"</string>
     <string name="denied_apps_banner_message_two_apps" msgid="1147216810892373640">"ヘルスコネクトにより、<xliff:g id="APP_DATA_0">%1$s</xliff:g> と <xliff:g id="APP_DATA_TWO">%2$s</xliff:g> の権限が削除されました"</string>
@@ -488,10 +499,8 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Google Play ストアにアクセス"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"ヘルスコネクトを使ってみる"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"ヘルスコネクトを利用すると、健康とフィットネスに関するデータを保存し、デバイス上のさまざまなアプリを簡単に同期することができます"</string>
-    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
-    <skip />
-    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
-    <skip />
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"ヘルスコネクトは、さまざまなアプリから健康とフィットネスに関するデータを保存、同期します。\n\n"<b>"フィットネスとウェルネスのデータ（"</b>" エクササイズ セッション、歩数、栄養、睡眠など）\n\n"<b>"医療記録（"</b>"ワクチン接種、検査結果など）"</string>
+    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"ヘルスコネクトを使用すると、次のようなことができます"</string>
     <string name="share_data" msgid="3481932156368883946">"アプリとデータを共有する"</string>
     <string name="share_data_description" msgid="2919871301634375092">"ヘルスコネクトに対して、各アプリが読み取りや書き込みを行えるデータを選択できます"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"設定とプライバシーを管理する"</string>
@@ -1076,6 +1085,8 @@
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"このアプリによるバックグラウンドでのアクセスまたは過去のデータのアクセスを有効にするには、少なくとも 1 つの読み取り権限を付与してください"</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"このアプリによるバックグラウンドでのアクセスを有効にするには、少なくとも 1 つの読み取り権限を付与してください"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"このアプリによる過去のデータのアクセスを有効にするには、少なくとも 1 つの読み取り権限を付与してください"</string>
+    <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"<xliff:g id="APP_NAME">%1$s</xliff:g> は医療記録の過去のデータにアクセスできるようになっています。この設定を変更するには、このアプリの医療記録の権限を OFF にしてください"</string>
+    <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"医療記録の権限を管理"</string>
     <string name="start_using_hc_banner_title" msgid="2030178284749796384">"ヘルスコネクトの使用を開始する"</string>
     <string name="start_using_hc_banner_content" msgid="3171560198945933334">"健康とフィットネスに関するデータを共有する 1 つ目のアプリを同期する"</string>
     <string name="start_using_hc_set_up_button" msgid="7486865297236439364">"設定"</string>
